Updated with Google Form links

--- a/personal_webpage.html
+++ b/personal_webpage.html
@@ -48,16 +48,16 @@
             <h2>Sign Up</h2>
             <p>Please choose your role:</p>
             <div class="form-section">
-                <a href="https://forms.gle/your-google-form-for-entrepreneurs" target="_blank">Entrepreneur Sign Up</a>
-                <a href="https://forms.gle/your-google-form-for-investors" target="_blank">Investor Sign Up</a>
-                <a href="https://forms.gle/your-google-form-for-banks" target="_blank">Bank Sign Up</a>
-                <a href="https://forms.gle/your-google-form-for-moderators" target="_blank">Moderator Sign Up</a>
+                <a href="https://forms.gle/your-google-form-for-entrepreneurs" target="https://docs.google.com/forms/d/e/1FAIpQLSdm4AIJMv2CxrBrNUGc54NmxPDYVQ2eZPw4AG6RuRINpjMN_A/viewform?usp=sf_link ">Entrepreneur Sign Up</a>
+                <a href="https://forms.gle/your-google-form-for-investors" target="https://docs.google.com/forms/d/e/1FAIpQLSdm4AIJMv2CxrBrNUGc54NmxPDYVQ2eZPw4AG6RuRINpjMN_A/viewform?usp=sf_link">Investor Sign Up</a>
+                <a href="https://forms.gle/your-google-form-for-banks" target="https://docs.google.com/forms/d/e/1FAIpQLSeG3ZT5xCcssBDD2oOIMhEsscUSBWLS4i2kYx5If_prA92lQw/viewform?usp=sf_link">Bank Sign Up</a>
+                <a href="https://forms.gle/your-google-form-for-moderators" target="https://docs.google.com/forms/d/e/1FAIpQLSfFsyp7CmXEVv0SF9uudc45MjB0YinWZ6jtiGif48qKqbjH9Q/viewform?usp=sf_link">Moderator Sign Up</a>
             </div>
         </section>
         <section id="business-ideas">
             <h2>Submit Business Ideas</h2>
             <p>Entrepreneurs can submit their business ideas using the form below:</p>
-            <a href="https://forms.gle/your-google-form-for-business-ideas" target="_blank">Business Idea Submission Form</a>
+            <a href="https://forms.gle/your-google-form-for-business-ideas" target="https://docs.google.com/forms/d/e/1FAIpQLSeYZhtcKG16sbYu3Mpe6IDiKWL11j9RrnZJeyGcJQ25cS5ykQ/viewform?usp=sf_link">Business Idea Submission Form</a>
         </section>
         <section id="pitch-events">
             <h2>Pitch Events</h2>
