updated google forms links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Pitch Platform</title>
+    <title>TWIPLA</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 <body>
 
 <header>
-    <h1>Welcome to the Business Pitch Platform</h1>
+    <h1>Welcome to TWIPLA as the Business Pitch Platform for postgraduate students</h1>
 </header>
 
 <nav>
@@ -70,23 +70,23 @@
 </nav>
 
 <section id="introduction">
-    <h2>Connecting Entrepreneurs, Investors, Moderators, and Banks</h2>
-    <p>This platform connects entrepreneurs with innovative business ideas to investors, moderators (administrators), and banks. It facilitates business pitches and creates opportunities for partnerships and funding.</p>
+    <h2>Connecting Entrepreneurs and Investors then enabled by Banks</h2>
+    <p>This platform connects postgraduate entrepreneurs with innovative business ideas with investors and banks. It facilitates business pitches and creates opportunities for partnerships and funding.</p>
 </section>
 
 <section id="entrepreneur">
     <h3>Entrepreneur Sign-Up</h3>
-    <p>If you're an entrepreneur looking for funding, submit your business idea through the form below:</p>
+    <p>If you're postgraduate entrepreneur looking for funding, submit your business idea through the form below:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu6bCcWYVFZ5qxh329rH_OAAzZ2_hE6dyTsTWV1QgwNtRE8Q/viewform?usp=sf_link" target="_blank"><button>Submit Your Business Idea</button></a>
 </section>
 
 <section id="investor">
     <h3>Investor Sign-Up</h3>
-    <p>Investors can sign up to view business ideas and choose projects to fund:</p>
+    <p>Investors can sign up to view business ideas by postgraduate students and choose projects to fund:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSenHGKjgm-xBxP18oxg8k2N8oOPm0uZz4C6I6k7Uf3E231VXg/viewform?usp=sf_link" target="_blank"><button>Investor Sign-Up</button></a>
 </section>
 
-<section id="moderator">
+<section id="Administrator">
     <h3>Administrator Sign-Up</h3>
     <p>Moderators oversee the platform's activity, ensuring smooth operations between entrepreneurs, investors, and banks:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFsyp7CmXEVv0SF9uudc45MjB0YinWZ6jtiGif48qKqbjH9Q/viewform?usp=sf_link" target="_blank"><button>Administrator Sign-Up</button></a>
@@ -94,18 +94,18 @@
 
 <section id="bank">
     <h3>Bank Sign-Up</h3>
-    <p>Banks can sign up to support businesses by providing loans or other financial services:</p>
+    <p>Banks can sign up to support businesses by providing loans to investors:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeG3ZT5xCcssBDD2oOIMhEsscUSBWLS4i2kYx5If_prA92lQw/viewform?usp=sf_link" target="_blank"><button>Bank Sign-Up</button></a>
 </section>
 
 <section id="submission">
     <h3>Business Idea Submission</h3>
-    <p>Submit your business idea for evaluation by investors and moderators:</p>
+    <p>Submit your business idea for evaluation by investors and banks:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYZhtcKG16sbYu3Mpe6IDiKWL11j9RrnZJeyGcJQ25cS5ykQ/viewform?usp=sf_link" target="_blank"><button>Submit Business Idea</button></a>
 </section>
 
 <footer>
-    <p>Business Pitch Platform &copy; 2024 | Created by Nzamubona Simeon</p>
+    <p>Business Pitch Platform &copy; 2024 | Created by Simeon Nzamubona </p>
 </footer>
 
 </body>
