--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             color: #333;
             margin: 0;
             padding: 0;
-            scroll-behavior: smooth;
-            min-height: 100vh;
+            scroll-behavior: smooth; /* Smooth scrolling */
+            min-height: 100vh; /* Ensure the body takes full height */
             display: flex;
             flex-direction: column;
         }
@@ -22,13 +22,13 @@
             color: white;
             padding: 10px 0;
             text-align: center;
-            flex-shrink: 0;
+            flex-shrink: 0; /* Prevent the header from shrinking */
         }
         nav {
             display: flex;
             justify-content: center;
             margin: 20px 0;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* Allow wrap on small screens */
         }
         nav a {
             margin: 0 15px;
@@ -54,34 +54,29 @@
             padding: 20px;
             background-color: #4CAF50;
             color: white;
-            margin-top: auto;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            cursor: pointer;
-            margin: 5px 0;
-        }
-        button:hover {
-            background-color: #45a049;
+            margin-top: auto; /* Push footer to the bottom */
         }
 
-        /* Connection Updates Section */
-        .updates {
-            background-color: #e8f5e9;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-left: 5px solid #4CAF50;
+        /* New Styles for Recent Connections */
+        #recent-connections {
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 5px;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .update-item {
-            margin-bottom: 10px;
+        #recent-connections h3 {
+            color: #4CAF50;
+        }
+        .connection-update {
+            margin: 10px 0;
             padding: 10px;
-            border-bottom: 1px solid #ddd;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         }
-        .update-item:last-child {
-            border-bottom: none;
+        .connection-update p {
+            margin: 5px 0;
         }
 
         /* Responsive Layout */
@@ -95,6 +90,18 @@
             section {
                 padding: 15px;
             }
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+            margin: 5px 0;
+        }
+        button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -118,7 +125,7 @@
 
 <section id="entrepreneur">
     <h3>Entrepreneur Sign-Up</h3>
-    <p>If you're a postgraduate entrepreneur looking for funding, submit your business idea through the form below:</p>
+    <p>If you're postgraduate entrepreneur looking for funding, submit your business idea through the form below:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu6bCcWYVFZ5qxh329rH_OAAzZ2_hE6dyTsTWV1QgwNtRE8Q/viewform?usp=sf_link" target="_blank"><button>Submit Your Business Idea</button></a>
 </section>
 
@@ -140,19 +147,20 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-9kqfJm-VL2JDBu8a78HEoUwCYNy_qHLGnZIJe-xEdcf3w/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
 </section>
 
-<!-- Connection Updates Section -->
-<section id="updates">
+<!-- Recent Connections Section -->
+<section id="recent-connections">
     <h3>Recent Connections</h3>
-    <div class="updates">
-        <div class="update-item">
-            <strong>Entrepreneur Jane Doe</strong> connected with <strong>Investor ABC Ventures</strong>. They are now in the funding review stage.
-        </div>
-        <div class="update-item">
-            <strong>Bank XYZ</strong> has approved a loan for <strong>John's Startup</strong> after a successful pitch event.
-        </div>
-        <div class="update-item">
-            <strong>Moderator Lucy</strong> successfully facilitated a pitching event between <strong>GreenTech Startup</strong> and <strong>Investor GreenWorld</strong>.
-        </div>
+    <div class="connection-update">
+        <p><strong>Entrepreneur John Doe</strong> has connected with <strong>Investor Jane Smith</strong> to pitch their new AI-driven health tech startup.</p>
+        <p><em>Last Updated: 10 minutes ago</em></p>
+    </div>
+    <div class="connection-update">
+        <p><strong>Bank ABC</strong> has offered a loan support plan to <strong>Investor Mike Johnson</strong> for scaling his investments.</p>
+        <p><em>Last Updated: 30 minutes ago</em></p>
+    </div>
+    <div class="connection-update">
+        <p><strong>Moderator Alice Brown</strong> has confirmed a new pitch event between <strong>Entrepreneur Maria Lee</strong> and <strong>Investor Bill Gates</strong>.</p>
+        <p><em>Last Updated: 45 minutes ago</em></p>
     </div>
 </section>
 
