modified some note

--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
 <section id="recent-connections">
     <h3>Recent Connections</h3>
     <div class="connection-update">
-        <p><strong>Entrepreneur John Doe</strong> has connected with <strong>Investor Jane Smith</strong> to pitch their new AI-driven health tech startup.</p>
+        <p><strong>Entrepreneur of Msc Biomedical Engineering-Cohort 3 </strong> has connected with <strong>Investor Pharmalab Ltd </strong> to pitch their new AI-driven health tech startup.</p>
         <p><em>Last Updated: 10 minutes ago</em></p>
     </div>
     <div class="connection-update">
-        <p><strong>Bank ABC</strong> has offered a loan support plan to <strong>Investor Mike Johnson</strong> for scaling his investments.</p>
+        <p><strong>Bank of Kigali </strong> has offered a loan support plan to <strong> Msc Biomedical Engineering-Cohort 3 </strong> for scaling his investments.</p>
         <p><em>Last Updated: 30 minutes ago</em></p>
     </div>
     <div class="connection-update">
-        <p><strong>Moderator Alice Brown</strong> has confirmed a new pitch event between <strong>Entrepreneur Maria Lee</strong> and <strong>Investor Bill Gates</strong>.</p>
+        <p><strong>Moderator Simeon Nzamubona </strong> has confirmed a new pitch event between <strong>Entrepreneur Msc Biomedical Engineering-Cohort 3 </strong> and <strong>Investor Bill Gates</strong>.</p>
         <p><em>Last Updated: 45 minutes ago</em></p>
     </div>
 </section>
