modified recent connections

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
 
 <header>
-    <h1>Welcome to TWIPLA as the Business Pitch Platform for postgraduate students</h1>
+    <h1>Welcome to TWIGIRE PLATFORM as the Business Pitch Platform for postgraduate students</h1>
 </header>
 
 <nav>
@@ -147,19 +147,19 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-9kqfJm-VL2JDBu8a78HEoUwCYNy_qHLGnZIJe-xEdcf3w/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
 </section>
 
-<!-- Recent Connections Section -->
-<section id="recent-connections">
-    <h3>Recent Connections</h3>
+<!-- Recent Connections Section and pending connections -->
+<section id="recent-connections and pending connections">
+    <h3>Recent Connections and pending connections </h3>
     <div class="connection-update">
-        <p><strong>Entrepreneur of Msc Biomedical Engineering-Cohort 3 </strong> has connected with <strong>Investor Pharmalab Ltd </strong> to pitch their new AI-driven health tech startup.</p>
+        <p><strong> Msc Biomedical Engineering-Cohort 3 </strong> has pending connection with <strong>Investor Pharmalab Ltd </strong> to pitch their new Medical laboratory consumables Business Idea.</p>
         <p><em>Last Updated: 10 minutes ago</em></p>
     </div>
     <div class="connection-update">
-        <p><strong>Bank of Kigali </strong> has offered a loan support plan to <strong> Msc Biomedical Engineering-Cohort 3 </strong> for scaling his investments.</p>
+        <p><strong>Bank of Kigali </strong> has a pending loan support plan to <strong> Msc Biomedical Engineering-Cohort 3 </strong> for scaling his investments.</p>
         <p><em>Last Updated: 30 minutes ago</em></p>
     </div>
     <div class="connection-update">
-        <p><strong>Moderator Simeon Nzamubona </strong> has confirmed a new pitch event between <strong>Entrepreneur Msc Biomedical Engineering-Cohort 3 </strong> and <strong>Investor Bill Gates</strong>.</p>
+        <p><strong>Moderator Simeon Nzamubona </strong> is organizing a first pitch event between <strong> Msc Biomedical Engineering-Cohort 3 </strong> and <strong>Pharmalab Ltd</strong>.</p>
         <p><em>Last Updated: 45 minutes ago</em></p>
     </div>
 </section>
