modified some notes

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <p><em>Last Updated: 30 minutes ago</em></p>
     </div>
     <div class="connection-update">
-        <p><strong>Moderator Simeon Nzamubona </strong> is organizing a first pitch event between <strong> Msc Biomedical Engineering-Cohort 3 </strong> and <strong>Pharmalab Ltd</strong>.</p>
+        <p><strong>Moderator Simeon Nzamubona </strong> is organizing a first pitch event between <strong> Msc Biomedical Engineering-Cohort 3 </strong> and <strong>Pharmalab Ltd along with Bank of Kigali</strong>.</p>
         <p><em>Last Updated: 45 minutes ago</em></p>
     </div>
 </section>
