--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
     <a href="#bank">Bank Sign-Up</a>
 </nav>
 
-<section id="introduction">
-    <h2>Connecting Entrepreneurs and Investors then enabled by Banks</h2>
-    <p>This platform connects postgraduate entrepreneurs with innovative business ideas with investors and banks. It facilitates business pitches and creates opportunities for partnerships and funding.</p>
-</section>
 
 <section id="entrepreneur">
     <h3>Entrepreneur Sign-Up</h3>
-    <p>If you're postgraduate entrepreneur looking for funding, submit your business idea through the form below:</p>
+    <p>Welcome to TWIPLA, the platform where postgraduate students transform their innovative ideas into funded ventures. Whether you're embarking on a new entrepreneurial journey or seeking financial support for your studies, TWIPLA connects you with investors and banks. Collaborate with fellow students to create strong, convincing business projects and unlock opportunities to make your vision a reality. Together, we turn ambition into success!</p>
+    <p>If you're a postgraduate entrepreneur looking for funding, submit your business idea through the form below:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu6bCcWYVFZ5qxh329rH_OAAzZ2_hE6dyTsTWV1QgwNtRE8Q/viewform?usp=sf_link" target="_blank"><button>Submit Your Business Idea</button></a>
 </section>
 
+
 <section id="investor">
     <h3>Investor Sign-Up</h3>
+    <p><strong>Invest in the Future of Innovation:</strong> At TWIPLA, investors have the opportunity to partner with passionate postgraduate students who are driven to make a difference in their fields. These students bring fresh ideas, cutting-edge solutions, and the determination to succeed. By investing in these ventures, you're not only helping turn groundbreaking ideas into reality, but you're also positioning yourself to benefit from the next generation of profitable, high-impact businesses. Join us in shaping the future, while reaping the rewards of your investment in tomorrow’s leaders.</p>
     <p>Investors can sign up to view business ideas by postgraduate students and choose projects to fund:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSenHGKjgm-xBxP18oxg8k2N8oOPm0uZz4C6I6k7Uf3E231VXg/viewform?usp=sf_link" target="_blank"><button>Become an Investor</button></a>
 </section>
+
 
 <section id="moderator">
     <h3>Administrator Sign-Up</h3>
@@ -141,11 +141,15 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScuXfPqZyJ2_qT-P-sys1mxsD8xzzvStG0PfyadJbA5_D8D0g/viewform?usp=sf_link" target="_blank"><button>Sign-Up as Moderator</button></a>
 </section>
 
+
 <section id="bank">
     <h3>Bank Sign-Up</h3>
+    <p>Support the next generation of business leaders. By signing up as a bank on TWIPLA, you enable innovative ventures to receive the funding they need to thrive. Partner with entrepreneurs and investors to provide financial guidance and turn potential into growth.</p>
     <p>Banks can join the platform to support funding and provide financial guidance for business ventures:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-9kqfJm-VL2JDBu8a78HEoUwCYNy_qHLGnZIJe-xEdcf3w/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
 </section>
+
+
 
 <!-- Recent Connections Section and pending connections -->
 <section id="recent-connections and pending connections">
