updated google forms and changed some notes

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 </nav>
 
 <section id="entrepreneur">
-    <h3>Postgraduate Entrepreneur Team or cohort Entry</h3>
-    <p>Welcome to TWIPLA, the platform where postgraduate entrepreneur students team or cohort transform their innovative ideas into funded ventures. Whether you're embarking on a new entrepreneurial journey or seeking financial support for your studies, TWIPLA connects you with investors and banks. Collaborate with fellow students to create strong, convincing business projects and unlock opportunities to make your vision a reality. Together, we turn ambition into success!</p>
+    <h3>Specialized Entrepreneur Team Entry</h3>
+    <p>Welcome to TWIPLA, the platform where Specialized entrepreneur team transform their innovative ideas into funded ventures. Whether you're embarking on a new entrepreneurial journey or seeking financial support for your studies, TWIPLA connects you with investors and banks. Collaborate with fellow students to create strong, convincing business projects and unlock opportunities to make your vision a reality. Together, we turn ambition into success!</p>
     <p>If you're a postgraduate entrepreneur students team or cohort looking for funding, submit your business idea through the form below:</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScu6bCcWYVFZ5qxh329rH_OAAzZ2_hE6dyTsTWV1QgwNtRE8Q/viewform?usp=sf_link" target="_blank"><button>Submit Your Business Idea</button></a>
 </section>
@@ -138,17 +138,18 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSenHGKjgm-xBxP18oxg8k2N8oOPm0uZz4C6I6k7Uf3E231VXg/viewform?usp=sf_link" target="_blank"><button>Become an Investor</button></a>
 </section>
 
+
 <section id="moderator">
     <h3>Moderator Entry</h3>
     <p>Moderators can manage pitch events and ensure smooth interactions between entrepreneurs, investors, and banks:</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScuXfPqZyJ2_qT-P-sys1mxsD8xzzvStG0PfyadJbA5_D8D0g/viewform?usp=sf_link" target="_blank"><button>Sign-Up as Moderator</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFsyp7CmXEVv0SF9uudc45MjB0YinWZ6jtiGif48qKqbjH9Q/viewform?usp=sf_link" target="_blank"><button>Sign-Up as Moderator</button></a>
 </section>
 
 <section id="bank">
     <h3>Bank Entry</h3>
     <p>Support the next generation of business leaders. By signing up as a bank on TWIPLA, you enable innovative ventures to receive the funding they need to thrive. Partner with entrepreneurs and investors to provide financial guidance and turn potential into growth.</p>
     <p>Banks can join the platform to support funding and provide financial guidance for business ventures:</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-9kqfJm-VL2JDBu8a78HEoUwCYNy_qHLGnZIJe-xEdcf3w/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeG3ZT5xCcssBDD2oOIMhEsscUSBWLS4i2kYx5If_prA92lQw/viewform?usp=sf_link" target="_blank"><button>Sign-Up as a Bank</button></a>
 </section>
 
 <!-- Recent Connections Section and pending connections -->
