updated footer with contacts details

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 
 <footer>
     <p>&copy; 2024 TWIPLA. All rights reserved. | Created by sim </p>
+    <p>Contact us: <a href="mailto:youremail@example.com">nzamubonasimeon@gmail.com</a> | Phone: +250 784803560 / +250 786854200</p>
     <p><a href="terms.html" style="color: white;">Terms & Conditions</a> | <a href="privacy.html" style="color: white;">Privacy Policy</a></p>
 </footer>
 
